versione quasi finale